@@ -286,8 +286,7 @@ System,function,ENV,815,"ENV expr","See ENVIRON."
 System,function,ENVIRON,816,"ENVIRON expr","Returns the value of a specified entry in the current environment table. If the parameter is empty ("""") then returns an array of the environment variables (in var=value form)."
 System,function,PROGLINE,817,"PROGLINE","Returns the current program line number."
 System,function,RUN,818,"RUN cmdstr","Loads a secondary copy of system's shell and, executes an program, or an shell command."
-System,function,TICKS,819,"TICKS","Returns the system-ticks. The tick value is depended on operating system."
-System,function,TICKSPERSEC,820,"TICKSPERSEC","Returns the number of ticks per second."
+System,function,TICKS,819,"TICKS","Returns the number of milliseconds that have elapsed between successive calls."
 System,function,TIMER,821,"TIMER","Returns the number of seconds from midnight."
 Language,keyword,DECLARE,0,"DECLARE FUNC xxx","Forward declare SUB or FUNC. Obsolete QB compatibility"
 Language,keyword,TO,0,"FOR t = 1 TO 10","Specifies the loop counter end in a FOR loop"
